# aumos-sovereign-ai

./: CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.dev.yml  pyproject.toml
src/aumos_sovereign_ai/: __init__.py  main.py  settings.py
src/aumos_sovereign_ai/adapters/: __init__.py  compliance_auditor.py  data_sovereignty_enforcer.py  encryption_key_manager.py  eu_ai_act_classifier.py  gaia_x_adapter.py  jurisdiction_router.py  k8s_client.py  kafka.py  local_model_deployer.py  offline_runtime.py  regional_deployer.py  repositories.py  sovereign_registry.py
src/aumos_sovereign_ai/api/: __init__.py  router.py  schemas.py
src/aumos_sovereign_ai/core/: __init__.py  interfaces.py  models.py  services.py
tests/: __init__.py  conftest.py  test_api.py  test_health.py  test_services.py
